istio-config/wsdb-auth.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: wsdb-auth
  namespace: zipper
spec:
  workloadSelector:
    labels:
      app: my-wsdb
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          portNumber: 8080
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
              subFilter:
                name: "envoy.filters.http.router"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.lua
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
            inlineCode: |

              function is_request_authenticated(request)
                local token = request:headers():get("x-username")
                local path = request:headers():get(":path")
                local basePath = "/users/card"
                local hasUser = basePath .. "/"
                if token ~= nil then
                  hasUser = hasUser .. token
                end
                local user = path:match(hasUser)

                return user ~= nil or path == basePath
              end

              function envoy_on_request(request)
                local is_authenticated = is_request_authenticated(request)

                if not is_authenticated then
                  request:respond({[":status"] = 403}, "")
                else
                  request:headers():replace("X-Service", service)
                end
              end
